# crayfish

./: Cargo.toml  README.md
.github/workflows/: cargo_lints.yml
crates/account-macro/src/: lib.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: lib.rs  programs.rs
crates/accounts/src/accounts/: account.rs  anchor.rs  mod.rs  mutable.rs  program.rs  signer.rs
crates/context-macro/src/: accounts.rs  arguments.rs  constraints.rs  lib.rs
crates/context-macro/src/constraints/: bump.rs  mod.rs  seeds.rs
crates/context/src/: args.rs
crates/cpi-generator/: Cargo.toml
crates/cpi-generator/src/: lib.rs
crates/cpi-generator/src/anchor/: account.rs  idl.rs  instruction.rs  mod.rs  program_id.rs  type.rs
crates/errors/src/: lib.rs
crates/idl-generator/: Cargo.toml
crates/idl-generator/src/: lib.rs  main.rs
crates/metadata-extractor/: Cargo.toml
crates/metadata-extractor/src/: account.rs  definition.rs  lib.rs  main.rs  parsing.rs  plugin.rs  program.rs  ty.rs
crates/metadata-extractor/src/helpers/: attributes.rs
crates/metadata-extractor/src/instruction/: mod.rs
crates/metadata-extractor/src/visitors/: filter_by_impls_visitor.rs  mod.rs
crates/metadata-extractor/tests/: filter_by_impls_visitor.rs
crates/program/: Cargo.toml
crates/program/src/: bytes.rs  lib.rs  pinocchio.rs  vanilla.rs
crates/syn/: Cargo.toml
crates/syn/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/counter/tests/: integration.rs
examples/hello-world/: Cargo.toml
examples/instruction-data/src/: lib.rs
examples/instruction-data/tests/: integration.rs
examples/seeds/: Cargo.toml
examples/seeds/src/: lib.rs
examples/seeds/tests/: integration.rs
examples/transfer-sol/: Cargo.toml
examples/transfer-sol/tests/: integration.rs
