[package]
name = "crayfish-accounts"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["anchor"]
anchor = ["anchor-lang"]

[dependencies]
aligned.workspace = true
anchor-lang = { workspace = true, optional = true }
bytemuck.workspace = true
crayfish-errors.workspace = true
crayfish-program.workspace = true
