[package]
name = "crayfish-metadata-extractor"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
codama.workspace = true
codama-attributes.workspace = true
codama-nodes.workspace = true
codama-koroks.workspace = true
codama-korok-plugins.workspace = true
codama-korok-visitors.workspace = true
codama-stores.workspace = true
codama-syn-helpers.workspace = true
five8_const.workspace = true
syn = { workspace = true, features = [
    "full",
    "visit",
    "extra-traits",
] } #TODO remove extra-traits
